--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <p id="pesan3" style="opacity:0;">Ciee.. Ada yang Ultah Nih</p>
         <p id="pesan4">Happy Birthday, </p>
         <p id="pesan5" class="gaya2">Nambah tua aja ya, hehe</p>
-        <p id="pesan6" class="gaya2">Moga panjang umur biar tahun depan diucapin juga</p>
+        <p id="pesan6" class="gaya2">Moga panjang umur biar 3 des ad yg ngucapin</p>
         <p id="pesan7" class="gaya2">Sehat selalu ya!</p>
         <p id="pesan8" class="gaya2">Canda wkwwk :v</p>
         <p id="pesan9" class="gaya2">Oh iya, semoga di hari spesialmu ini kamu dapat menjadi pribadi yang lebih baik yaa.. 🥳</p>
